<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Stock Management</string>

    <string name="number0" translatable="false">0</string>

    <string name="ok">OK</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="action">Action</string>
    <string name="edit">Edit</string>
    <string name="editing">Editing</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="detail">Details</string>
    <string name="save">Save</string>
    <string name="dictionary">Dictionary</string>
    <string name="singular">Singular</string>
    <string name="plural">Plural</string>
    <string name="reset">Reset</string>
    <string name="warning">Warning</string>
    <string name="test">Test</string>
    <string name="importStr">Import</string>
    <string name="export">Export</string>

    <string name="item_name">Item name</string>
    <string name="quantityUnit_label">Quantity:</string>
    <string name="quantityUnit_value">0 unit(s)</string>
    <string name="quantityOut_label">Quantity left in the open pack:</string>
    <string name="quantityOut_value">@string/quantityUnit_value</string>
    <string name="nbPack_label">Quantity of full pack:</string>
    <string name="nbPack_value">@string/quantityUnit_value</string>
    <string name="itemDetailActivity_title">@string/detail</string>
    <string name="addQuantity">@string/add</string>
    <string name="removeQuantity">@string/remove</string>
    <string name="addQuantityOut">@string/addQuantity</string>
    <string name="removeQuantityOut">@string/removeQuantity</string>
    <string name="addPack">Add pack(s)</string>
    <string name="removePack">Remove pack(s)</string>
    <string name="notifThreshold_label">Notification threshold:</string>
    <string name="notifThreshold_value">1 unit(s)</string>
    <string name="actionBar_modifyOrder">Change order</string>
    <string name="actionBar_removeItem">Remove item</string>
    <string name="edit_item">@string/editing</string>
    <string name="label_name">Name:</string>
    <string name="label_picture">Picture:</string>
    <string name="mainActivity_floatingActionButton_contentDescription">@string/add</string>
    <string name="itemAdapter_imageView_contentDescription">@string/action</string>
    <string name="itemDetailActivity_floatingActionButton_contentDescription">@string/edit</string>
    <string name="editItemActivity_imageView_contentDescription">Item Picture</string>
    <string name="editItemActivity_button_choosePicture_text">Choose picture</string>
    <string name="editItemActivity_button_choosePicture_contentDescription">Choose item picture</string>
    <string name="editItemActivity_button_deletePicture_text">Delete picture</string>
    <string name="editItemActivity_button_deletePicture_contentDescription">Choose item picture</string>
    <string name="type">Type :</string>
    <string name="simpleItem">Simple Item</string>
    <string name="packItem">Packed item</string>
    <string name="unit_label">Unit:</string>
    <string name="unit_value">unit(s)</string>
    <string name="threshold">Threshold:</string>
    <string name="unitPack">Pack Unit:</string>
    <string name="unitPackExample">pack, box, etc…</string>
    <string name="quantityMaxInPack">Quantity max in pack:</string>
    <string name="unitInPack">Unit in pack:</string>
    <string name="preview">Preview:</string>
    <string name="example_label">Example:</string>
    <string name="example_value">5 box of 50 gloves:</string>
    <string name="addInDictionary">Add in dictionary</string>
    <string name="editInDictionary">Edit in dictionary</string>
    <string name="splashscreen_image_contentDescription">Splashscreen Image</string>
</resources>
