<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menu_buttons">

        <item
            android:id="@+id/menu_button_cancel"
            android:title="@string/cancel"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/menu_button_ok"
            android:title="@string/ok"
            app:showAsAction="always" />

    </group>

    <group android:id="@+id/menu_submenu_buttons">

        <item
            android:id="@+id/menu_submenu_button_modifyOrder"
            android:title="@string/actionBar_modifyOrder"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_submenu_button_edit"
            android:title="@string/edit"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_submenu_button_removeItem"
            android:title="@string/actionBar_removeItem"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_submenu_button_resetButton"
            android:title="@string/reset"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_submenu_button_dictionary"
            android:title="@string/dictionary"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_submenu_button_test"
            android:title="@string/test"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_submenu_button_import"
            android:title="@string/importStr"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_submenu_button_export"
            android:title="@string/export"
            app:showAsAction="never" />

    </group>

</menu>