<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/action_bar_actionButton">
        <item
            android:id="@+id/action_bar_actionButton_cancel"
            android:title="@string/cancel"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_bar_actionButton_ok"
            android:title="@string/ok"
            app:showAsAction="ifRoom" />
    </group>
    <group android:id="@+id/action_bar_menu">
        <item
            android:id="@+id/actionBar_menu_modifyOrder"
            android:title="@string/actionBar_modifyOrder"
            app:showAsAction="never" />
        <item
            android:id="@+id/actionBar_menu_removeItem"
            android:title="@string/actionBar_removeItem"
            app:showAsAction="never" />

        <item
            android:id="@+id/actionBar_menu_razButton"
            android:title="@string/actionBar_raz"
            android:visible="true"
            app:showAsAction="never" />
    </group>
</menu>