<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Root"
    tools:context=".controllers.activities.EditItemActivity">

    <LinearLayout style="@style/Activity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activityEditItem_toolbar"
            style="@style/ToolBar.NotMainActivity"
            app:title="@string/edit_item" />

        <ScrollView style="@style/FillHorizontal">

            <LinearLayout style="@style/Section.Principal">

                <LinearLayout style="@style/Container.LabelValue">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/label_name" />

                    <EditText
                        android:id="@+id/activityEditItem_editText_itemName"
                        style="@style/EditText.Text"
                        android:hint="@string/item_name"
                        tools:ignore="Autofill" />

                </LinearLayout>

                <RadioGroup style="@style/Container.LabelValue">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/type" />

                    <RadioButton
                        android:id="@+id/activityEditItem_radioButton_basicItem"
                        style="@style/TextView.Value"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/simpleItem" />

                    <RadioButton
                        android:id="@+id/activityEditItem_radioButton_packItem"
                        style="@style/TextView.Value"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/packItem" />

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/activityEditItem_linearLayout_basicItem"
                    style="@style/Section">

                    <LinearLayout style="@style/Container.LabelValue">

                        <TextView
                            style="@style/TextView"
                            android:text="@string/unit_label" />

                        <LinearLayout style="@style/Container.ValueUnit">

                            <AutoCompleteTextView
                                android:id="@+id/activityEditItem_autoCompleteTextView_basicItem_unit"
                                style="@style/EditText.Text"
                                android:hint="@string/unit_value"
                                tools:ignore="Autofill" />

                            <ImageButton
                                android:id="@+id/activityEditItem_imageButton_basicItem_unit"
                                style="@style/ImageButton"
                                android:contentDescription="@string/addInDictionary" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        style="@style/Container.LabelValue"
                        android:visibility="gone">

                        <TextView
                            style="@style/TextView"
                            android:text="@string/quantityUnit_label" />

                        <LinearLayout style="@style/Container.ValueUnit">

                            <EditText
                                android:id="@+id/activityEditItem_editText_basicItem_quantity"
                                style="@style/EditText.Number"
                                tools:ignore="Autofill,LabelFor" />

                            <TextView
                                android:id="@+id/activityEditItem_textView_basicItem_unit_for_quantity"
                                style="@style/TextView"
                                android:text="@string/unit_value" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout style="@style/Container.LabelValue">

                        <TextView
                            style="@style/TextView"
                            android:text="@string/threshold" />

                        <LinearLayout style="@style/Container.ValueUnit">

                            <EditText
                                android:id="@+id/activityEditItem_editText_basicItem_seuil"
                                style="@style/EditText.Number"
                                tools:ignore="Autofill,LabelFor" />

                            <TextView
                                android:id="@+id/activityEditItem_textView_basicItem_unit_for_seuil"
                                style="@style/TextView"
                                android:text="@string/unit_value" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/activityEditItem_linearLayout_packItem"
                    style="@style/Section">

                    <LinearLayout style="@style/Container.LabelValue">

                        <TextView
                            style="@style/TextView"
                            android:text="@string/unitPack" />

                        <LinearLayout style="@style/Container.ValueUnit">

                            <AutoCompleteTextView
                                android:id="@+id/activityEditItem_autoCompleteTextView_packItem_unitPack"
                                style="@style/EditText.Text"
                                android:hint="@string/unitPackExample"
                                tools:ignore="Autofill" />

                            <ImageButton
                                android:id="@+id/activityEditItem_imageButton_packItem_unitPack"
                                style="@style/ImageButton"
                                android:contentDescription="@string/addInDictionary" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout style="@style/Container.LabelValue">

                        <TextView
                            style="@style/TextView"
                            android:text="@string/unitInPack" />

                        <LinearLayout style="@style/Container.ValueUnit">

                            <AutoCompleteTextView
                                android:id="@+id/activityEditItem_autoCompleteTextView_packItem_unit"
                                style="@style/EditText.Text"
                                android:hint="@string/unit_value"
                                tools:ignore="Autofill" />

                            <ImageButton
                                android:id="@+id/activityEditItem_imageButton_packItem_unit"
                                style="@style/ImageButton"
                                android:contentDescription="@string/addInDictionary" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout style="@style/Container.LabelValue">

                        <TextView
                            style="@style/TextView"
                            android:text="@string/quantityMaxInPack" />

                        <LinearLayout style="@style/Container.ValueUnit">

                            <EditText
                                android:id="@+id/activityEditItem_editText_packItem_quantityMaxInPack"
                                style="@style/EditText.Number"
                                tools:ignore="Autofill,LabelFor" />

                            <TextView
                                android:id="@+id/activityEditItem_textView_packItem_unit_for_quantityMaxInPack"
                                style="@style/TextView"
                                android:text="@string/unit_value" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        style="@style/Container.LabelValue"
                        android:visibility="gone">

                        <TextView
                            style="@style/TextView"
                            android:text="@string/quantityOut_label" />

                        <LinearLayout style="@style/Container.ValueUnit">

                            <EditText
                                android:id="@+id/activityEditItem_editText_packItem_quantityOut"
                                style="@style/EditText.Number"
                                tools:ignore="Autofill,LabelFor" />

                            <TextView
                                android:id="@+id/activityEditItem_textView_packItem_unit_for_quantityOut"
                                style="@style/TextView"
                                android:text="@string/unit_value" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        style="@style/Container.LabelValue"
                        android:visibility="gone">

                        <TextView
                            style="@style/TextView"
                            android:text="@string/nbPack_label" />

                        <LinearLayout style="@style/Container.ValueUnit">

                            <EditText
                                android:id="@+id/activityEditItem_editText_packItem_nbPack"
                                style="@style/EditText.Number"
                                tools:ignore="Autofill,LabelFor" />

                            <TextView
                                android:id="@+id/activityEditItem_textView_packItem_unit_for_nbPack"
                                style="@style/TextView"
                                android:text="@string/unitPackExample" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout style="@style/Container.LabelValue">

                        <TextView
                            style="@style/TextView"
                            android:text="@string/threshold" />

                        <LinearLayout style="@style/Container.ValueUnit">

                            <EditText
                                android:id="@+id/activityEditItem_editText_packItem_seuil"
                                style="@style/EditText.Number"
                                tools:ignore="Autofill,LabelFor" />

                            <TextView
                                android:id="@+id/activityEditItem_textView_packItem_unit_for_seuil"
                                style="@style/TextView"
                                android:text="@string/unitPackExample" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        style="@style/Container.LabelValue"
                        android:visibility="gone">

                        <TextView
                            style="@style/TextView"
                            android:text="@string/preview" />

                        <TextView
                            android:id="@+id/activityEditItem_textView_packItem_example"
                            style="@style/TextView.Value" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/Container.LabelValue"
                        android:visibility="gone">

                        <TextView
                            style="@style/TextView"
                            android:text="@string/example_label" />

                        <TextView
                            style="@style/TextView.Value"
                            android:text="@string/example_value" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/activityEditItem_button_save"
                    style="@style/SimpleButton"
                    android:enabled="false"
                    android:text="@string/save" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>