<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemAdapter_cardView"
    android:layout_width="match_parent"
    android:layout_height="70sp"
    android:layout_margin="8sp"
    app:cardBackgroundColor="@color/colorSecondary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/itemAdapter_imageView_itemPicture"
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:contentDescription="@string/editItemActivity_imageView_contentDescription"
            android:src="@drawable/ic_baseline_photo_size_select_actual_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemAdapter_textView"
            style="@style/TextView"
            android:text="@string/item_name"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/itemAdapter_imageView_itemPicture"
            app:layout_constraintRight_toLeftOf="@id/item_Adapter_imageView_action"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/item_Adapter_imageView_action"
            style="@style/ImageView"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:contentDescription="@string/itemAdapter_imageView_contentDescription"
            android:src="@drawable/ic_baseline_pan_tool_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>